--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav{
   background-color: rgb(226, 194, 176);
   float: left;
   height: 10em;
-  padding-right: 1em;
+  padding-right: 2em;
   margin-top: 6.4em;
   border-style: solid;
   border-color: black;
@@ -84,12 +84,16 @@ h1{
   border-radius: 0.8em;
 }
 
-ul{
+/*ul{
   columns: 3
-}
+}*/
 
 h2{
 font-family: 'Lobster',cursive;
 text-align: center;
 background-color: rgb(226, 194, 176);
+}
+
+#dontChangePlz{
+  clear: both;
 }
