--- a/style.css
+++ b/style.css
@@ -84,12 +84,8 @@ h1{
   border-radius: 0.8em;
 }
 
-/*ul{
+ul{
   columns: 3
-}*/
-
-th{
-  border: black thin;
 }
 
 h2{
@@ -98,6 +94,6 @@ text-align: center;
 background-color: rgb(226, 194, 176);
 }
 
-#dontChangePlz{
+/*#dontChangePlz{
   clear: both;
 }
