--- a/style.css
+++ b/style.css
@@ -94,6 +94,20 @@ text-align: center;
 background-color: rgb(226, 194, 176);
 }
 
+tr:nth-child(even){
+  background-color: rgb(226, 194, 176);
+}
+
+tr:nth-child(odd){
+  color: rgb(226, 194, 176);
+}
+td{
+  text-align: center;
+}
+
+th{
+  background-color: rgb(226, 194, 176);
+}
 /*#dontChangePlz{
   clear: both;
 }
