--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ img{
   padding-top: 1em;
 }
 
-#image{
+.image{
   background-color: rgb(226, 194, 176);
   margin-bottom: 0;
 }
@@ -55,7 +55,7 @@ h1{
   margin-right: 21em;
   padding-left: 5em;
   padding-right: 5em;
-  height: 15em;
+  height: 37em;
   border-radius: 4em;
   border-style: solid;
 }
@@ -115,4 +115,42 @@ th{
 
 #formTable{
   border: solid rgb(226, 194, 176) 1px;
+}
+
+ .locationNames{
+   text-align: center;
+   background-color: rgb(226, 194, 176);
+   margin-left: 20em;
+   margin-right: 22em;
+   border-radius: 15em;
+ }
+
+.locationList{
+  list-style-type: none;
+  text-align: center;
+  background-color: rgb(226, 194, 176);
+  margin-left: 30em;
+  margin-right: 33em;
+  border-radius: 15em;
+  padding-right: 2em;
+}
+
+hr{
+  background-color: rgb(226, 194, 176);
+}
+
+#cutter{
+  float: left;
+}
+#frostedCookie{
+  float: right;
+}
+
+#shop{
+  background-color: rgb(226, 194, 176);
+  text-align: center;
+  margin-left: 20em;
+  margin-right: 20em;
+  border-radius: 4em;
+  border-style: solid;
 }
